v12022.11.21 :: Fixed sidebar flickering

--- a/custom.css
+++ b/custom.css
@@ -1,1 +1,61 @@
 /* Custom Styles */
+
+#titlebar {
+appearance: none !important;
+}
+
+#sidebar-header {
+  padding: 5px 8px !important;
+  padding-top: 11px !important;
+}
+
+#nav-bar {
+  padding-top: 2px !important;
+}
+
+/* #main-window {
+	background-color: rgba(0,0,0,0.45) !important;
+	background: linear-gradient(8deg, rgba(0,0,0,0.4) 96%, #000) !important; /* gradient to hide the required windows control buttons in bg 
+	-moz-appearance: -moz-win-glass !important;
+} */
+/* #navigator-toolbox {
+	background: transparent !important;
+}
+#TabsToolbar {
+	background-image: none !important;    /* Windows 7 */
+} 
+/* 
+/* referenced from what FF does when using some persona themes */
+/* :root {
+	--toolbar-bgcolor: rgba(255,255,255,.4) !important;
+	--toolbar-field-background-color: rgba(255,255,255,.8) !important;
+	--urlbar-box-bgcolor: var(--button-bgcolor) !important;   
+	--button-hover-bgcolor: color-mix(in srgb, currentColor 17%, transparent) !important;
+	--button-active-bgcolor: color-mix(in srgb, currentColor 30%, transparent) !important;
+}
+#urlbar-background, #searchbar {
+	background-color: rgba(255,255,255,0.4) !important;
+}
+#urlbar[open="true"] > #urlbar-background {
+	background-color: rgb(255,255,255) !important;
+}
+@media (prefers-color-scheme: dark) {
+	:root {
+	 	--toolbar-bgcolor: rgba(0,0,0,.2) !important;
+		--toolbar-field-background-color: rgba(0,0,0,.8) !important;
+	}
+	#urlbar-background, #searchbar {
+		background-color: rgba(0,0,0,0.2) !important;
+	}
+	#urlbar[open="true"] > #urlbar-background {
+		background-color: rgb(0,0,0) !important;
+	}
+}
+#nav-bar {
+	box-shadow: 0 calc(-1 * var(--tabs-navbar-shadow-size)) 0 var(--lwt-tabs-border-color, rgba(0,0,0,.3)) !important;    
+	color: var(--toolbar-color) !important;
+}
+.tab-background[selected="true"] {
+	background-color: transparent !important;
+	background-image: linear-gradient(transparent, transparent), linear-gradient(var(--toolbar-bgcolor), var(--toolbar-bgcolor)), var(--lwt-header-image, none) !important;
+} */
